lightbox on mobiles fixed
display none not correct way to disable lightbox on mobile

--- a/css/my-style.css
+++ b/css/my-style.css
@@ -194,7 +194,6 @@ a[href^="mailto:"]:hover {
     }
     .photo {
         margin: 2px 0px 0px 2px;
-        display:none;
 
     }
 }
